# qpj

./: pyproject.toml
qpj/: admm.py
